# PwC_J-ppinen_Ltd_AI_Assistant

./: .gitignore  README.md  architecture.puml  pyproject.toml  template_dotenv
.github/workflows/: main.yml
.nvim/: launch.json
architecture/: architecture.puml
infra/: assistant_infra.tf  data_platform.tf  fine_tune_rag.py  terraform_env.tfvars_template  variables.tf
infra/litellm/: config.yaml
infra/ngrok/: config.yaml
knowledge_bases/test_1/: kbconfig.yaml
knowledge_bases/test_2/: kbconfig.yaml  testdoc_2.txt
src/application/: auditor_service.py  ingest_knowledge_bases.py  openwebui_serv.py
src/control/: app_controller.py  dependency_container.py  main.py  openwebui_serv.py  process_lock.py  shutdown_coordinator.py
src/domain/: models.py
src/domain/knowledge_base/: kb_config.py  knowledge_base_manager.py
src/infrastructure/: ai_provider.py  env.py  fs.py  litellm_client.py  logging.py  openwebui_connector.py
stubs/: yaml.pyi
