[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "PwC-assistant"
version = "0.1.0"
requires-python = ">=3.11,<3.12"
dependencies = [
    "returns",
    "pydantic",
    "dependency-injector",
    "httpx",
    "structlog",
    "dotenv",
    "open-webui",
]

[tool.setuptools.packages.find]
where = ["."]

[project.scripts]
run-app = "src.control.main:main"
just-serve = "src.control.openwebui_serv"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
mypy_path = ["stubs"]
